--- a/property_select.html
+++ b/property_select.html
@@ -66,7 +66,7 @@
       const propertyListDiv = document.getElementById('property-list');
       propertyListDiv.innerHTML = '<p>物件情報を読み込み中です...</p>'; 
 
-      const gasPropertyWebAppUrl = 'https://script.google.com/macros/s/AKfycbycxo4fhFdKq1uB8aYh06IIMbyxm20jFJhXjCu4zh-2UAILdnaoRh88Ig-9hfC_oi6BNw/exec'; // 物件.gs のデプロイID
+      const gasPropertyWebAppUrl = 'https://script.google.com/macros/s/AKfycbyBLMi-X4pEP9Et1IWGUUvCJvu3u51e8kOTaz2OCDyp0zQpxWFBrU3m1rAFMGGKQzvYag/exec'; // ★★★ 物件.gs の正しいデプロイIDに戻す ★★★
 
       try {
         const response = await fetch(`${gasPropertyWebAppUrl}?action=getProperties`); // ← action=getProperties を追加
