--- a/property_select.html
+++ b/property_select.html
@@ -31,7 +31,7 @@
     });
 
     // ★★★ 部屋.gs のウェブアプリURLを追加 ★★★
-    const gasRoomWebAppUrl = 'https://script.google.com/macros/s/AKfycbycxo4fhFdKq1uB8aYh06IIMbyxm20jFJhXjCu4zh-2UAILdnaoRh88Ig-9hfC_oi6BNw/exec'; // 部屋.gs の正しいデプロイID
+    //const gasRoomWebAppUrl = 'https://script.google.com/macros/s/AKfycbycxo4fhFdKq1uB8aYh06IIMbyxm20jFJhXjCu4zh-2UAILdnaoRh88Ig-9hfC_oi6BNw/exec'; // 部屋.gs の正しいデプロイID
 
     async function initializeWoff() { // 関数名を initializeLiff から initializeWoff に変更
       try {
@@ -66,7 +66,7 @@
       const propertyListDiv = document.getElementById('property-list');
       propertyListDiv.innerHTML = '<p>物件情報を読み込み中です...</p>'; 
 
-      const gasPropertyWebAppUrl = 'https://script.google.com/macros/s/AKfycbyBLMi-X4pEP9Et1IWGUUvCJvu3u51e8kOTaz2OCDyp0zQpxWFBrU3m1rAFMGGKQzvYag/exec'; // ★★★ 物件.gs の正しいデプロイIDに戻す ★★★
+      const gasPropertyWebAppUrl = 'https://script.google.com/macros/s/AKfycbycxo4fhFdKq1uB8aYh06IIMbyxm20jFJhXjCu4zh-2UAILdnaoRh88Ig-9hfC_oi6BNw/exec'; // ★★★ 物件.gs の正しいデプロイIDに戻す ★★★
 
       try {
         const response = await fetch(`${gasPropertyWebAppUrl}?action=getProperties`); // ← action=getProperties を追加
@@ -102,8 +102,10 @@
             button.onclick = async function() { // ★★★ async function に変更
               try {
                 // ★★★ 部屋情報を取得 ★★★
-                console.log(`[property_select] Fetching rooms for propertyId: ${property.id} from URL: ${gasRoomWebAppUrl}?action=getRooms&propertyId=${property.id}`);
-                const roomResponse = await fetch(`${gasRoomWebAppUrl}?action=getRooms&propertyId=${property.id}`);
+                // console.log(`[property_select] Fetching rooms for propertyId: ${property.id} from URL: ${gasRoomWebAppUrl}?action=getRooms&propertyId=${property.id}`);
+                // const roomResponse = await fetch(`${gasRoomWebAppUrl}?action=getRooms&propertyId=${property.id}`);
+                console.log(`[property_select] Fetching rooms for propertyId: ${property.id} from URL: ${gasPropertyWebAppUrl}?action=getRooms&propertyId=${property.id}`);
+                const roomResponse = await fetch(`${gasPropertyWebAppUrl}?action=getRooms&propertyId=${property.id}`);
                 
                 console.log('[property_select] Room Response Status:', roomResponse.status);
                 console.log('[property_select] Room Response Headers:', roomResponse.headers.get('Content-Type'));
