--- a/property_select.html
+++ b/property_select.html
@@ -63,7 +63,7 @@
       const propertyListDiv = document.getElementById('property-list');
       propertyListDiv.innerHTML = '<p>物件情報を読み込み中です...</p>'; 
 
-      const gasPropertyWebAppUrl = 'https://script.google.com/macros/s/AKfycbwS-sTvx9Jte1wB6fUK-_irBkxi4h9wj9EX6XylaGo6m9WSVivpZgD_MgrQccSaVesKeQ/exec'; // ★★★ 物件.gs の正しいデプロイIDに戻す ★★★
+      const gasPropertyWebAppUrl = 'https://script.google.com/macros/s/AKfycbyghOLaQ6Ob2xhcQiwdI6DTMe1FiVAHsFrehC5mcYApW3TKlLMgbvhCkCFgubhcing4Qw/exec';
 
       try {
         const response = await fetch(`${gasPropertyWebAppUrl}?action=getProperties`); // ← action=getProperties を追加
