--- a/property_select.html
+++ b/property_select.html
@@ -63,10 +63,10 @@
       const propertyListDiv = document.getElementById('property-list');
       propertyListDiv.innerHTML = '<p>物件情報を読み込み中です...</p>'; 
 
-      const gasPropertyWebAppUrl = 'https://script.google.com/macros/s/AKfycbyghOLaQ6Ob2xhcQiwdI6DTMe1FiVAHsFrehC5mcYApW3TKlLMgbvhCkCFgubhcing4Qw/exec';
+      const gasWebAppUrl = 'https://script.google.com/macros/s/AKfycbxy_zC6XkqiXm_fw4xbIZ822tx5KkzBpURmxlX5rgng94QAJmJbTZkOkeybdTJxYh8Whw/exec';
 
       try {
-        const response = await fetch(`${gasPropertyWebAppUrl}?action=getProperties`); // ← action=getProperties を追加
+        const response = await fetch(`${gasWebAppUrl}?action=getProperties`); // ← action=getProperties を追加
         if (!response.ok) {
           throw new Error('ネットワークの応答が正しくありませんでした。ステータス: ' + response.status);
         }
@@ -101,8 +101,8 @@
                 // ★★★ 部屋情報を取得 ★★★
                 // console.log(`[property_select] Fetching rooms for propertyId: ${property.id} from URL: ${gasRoomWebAppUrl}?action=getRooms&propertyId=${property.id}`);
                 // const roomResponse = await fetch(`${gasRoomWebAppUrl}?action=getRooms&propertyId=${property.id}`);
-                console.log(`[property_select] Fetching rooms for propertyId: ${property.id} from URL: ${gasPropertyWebAppUrl}?action=getRooms&propertyId=${property.id}`);
-                const roomResponse = await fetch(`${gasPropertyWebAppUrl}?action=getRooms&propertyId=${property.id}`);
+                console.log(`[property_select] Fetching rooms for propertyId: ${property.id} from URL: ${gasWebAppUrl}?action=getRooms&propertyId=${property.id}`);
+                const roomResponse = await fetch(`${gasWebAppUrl}?action=getRooms&propertyId=${property.id}`);
                 
                 console.log('[property_select] Room Response Status:', roomResponse.status);
                 console.log('[property_select] Room Response Headers:', roomResponse.headers.get('Content-Type'));
